# money_manager_backend

./: docker-compose.yml  generate_data.py  main.py  pyproject.toml
accounts/: admin.py  exceptions.py  models.py  schema.py
accounts/migrations/: 0001_initial.py  0002_initial.py
categories/: admin.py  exceptions.py  models.py  schema.py
categories/migrations/: 0001_initial.py
core/: managers.py  models.py  schema.py  settings.py  urls.py
core/commands/: bash_history.txt  consultas.gql
custom_user/: admin.py  forms.py  models.py  schema.py
custom_user/migrations/: 0001_initial.py
transactions/: admin.py  models.py  schema.py
transactions/migrations/: 0001_initial.py
